force-app/main/default/objects/PVL_Board_Assignment__c/PVL_Board_Assignment__c.object-meta.xml
<CustomObject>
    <label>Work Item Assignment</label>
    <nameField>
        <displayFormat>WIA-{00000}</displayFormat>
        <label>Work Item Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Item Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>