force-app/main/default/objects/PVL_Board_Assignment__c/fields/Assigned_Clerk__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Clerk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Respondent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PVL_Board_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>