force-app/main/default/objects/PVL_Board_Assignment__c/fields/Board_Program__c.field-meta.xml
<CustomField>
    <fullName>Board_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board / Program</label>
    <referenceTo>BoardProgram__c</referenceTo>
    <relationshipName>PVL_Board_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>