force-app/main/default/objects/PVL_Board_Assignment__c/fields/Clerk_Type__c.field-meta.xml
<CustomField>
    <fullName>Clerk_Type__c</fullName>
    <label>Respondent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applications</fullName>
                <label>Applications Clerk</label>
            </value>
            <value>
                <fullName>Records</fullName>
                <label>Records Clerk</label>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>