force-app/main/default/objects/PVL_Board_Assignment__c/fields/Duplicate_Key_Check__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Key_Check__c</fullName>
    <description>Used for duplicate and matching rules to restrict duplication of records</description>
    <label>Duplicate Key Check</label>
    <length>100</length>
    <type>Text</type>
</CustomField>