force-app/main/default/objects/PVL_Board_Assignment__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LicenseType__c.BoardProgram__c</field>
            <operation>equals</operation>
            <valueField>$Source.Board_Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipName>PVL_Board_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>