force-app/main/default/objects/PVL_Board_Assignment__c/fields/Notification_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_by_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification by Email</label>
    <type>Checkbox</type>
</CustomField>