force-app/main/default/objects/PVL_Board_Assignment__c/fields/Notification_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Notification_in_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification in Salesforce</label>
    <type>Checkbox</type>
</CustomField>