force-app/main/default/objects/PVL_Board_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Assigned_Clerk__c</columns>
    <columns>Clerk_Type__c</columns>
    <columns>Board_Program__c</columns>
    <columns>License_Type__c</columns>
    <columns>Notification_by_Email__c</columns>
    <columns>Notification_in_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>